cabal-version:        2.4
name:                 blackjack
version:              0.1.0.0

author:               Ilan J. Dor
maintainer:           Ilan J. Dor

extra-source-files:   CHANGELOG.md

executable blackjack
  main-is:            Blackjack.hs
  other-modules:      Data, Helpers
  build-depends:      base ^>=4.14.3.0,
                      ansi-terminal,
                      mtl,
                      random,
                      array
  hs-source-dirs:     src
  default-language:   Haskell2010
